; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/ti/extr_aintc.c_ti_aintc_pre_ithread.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/ti/extr_aintc.c_ti_aintc_pre_ithread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intr_irqsrc = type { i32 }
%struct.ti_aintc_softc = type { i32 }
%struct.ti_aintc_irqsrc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.intr_irqsrc*)* @ti_aintc_pre_ithread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ti_aintc_pre_ithread(i32 %0, %struct.intr_irqsrc* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.intr_irqsrc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ti_aintc_softc*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.intr_irqsrc* %1, %struct.intr_irqsrc** %4, align 8
  %7 = load %struct.intr_irqsrc*, %struct.intr_irqsrc** %4, align 8
  %8 = bitcast %struct.intr_irqsrc* %7 to %struct.ti_aintc_irqsrc*
  %9 = getelementptr inbounds %struct.ti_aintc_irqsrc, %struct.ti_aintc_irqsrc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call %struct.ti_aintc_softc* @device_get_softc(i32 %11)
  store %struct.ti_aintc_softc* %12, %struct.ti_aintc_softc** %6, align 8
  %13 = load %struct.ti_aintc_softc*, %struct.ti_aintc_softc** %6, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @ti_aintc_irq_mask(%struct.ti_aintc_softc* %13, i32 %14)
  %16 = load %struct.ti_aintc_softc*, %struct.ti_aintc_softc** %6, align 8
  %17 = call i32 @ti_aintc_irq_eoi(%struct.ti_aintc_softc* %16)
  ret void
}

declare dso_local %struct.ti_aintc_softc* @device_get_softc(i32) #1

declare dso_local i32 @ti_aintc_irq_mask(%struct.ti_aintc_softc*, i32) #1

declare dso_local i32 @ti_aintc_irq_eoi(%struct.ti_aintc_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
